--- a/public/index.html
+++ b/public/index.html
@@ -7,37 +7,55 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio site created with React"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <title>My Portfolio</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <style>
+      /* ---- Preloader minimal CSS ---- */
+      #preloader {
+        position: fixed; inset: 0; z-index: 9999;
+        display: grid; place-items: center;
+        background: #0b0b0b;
+        color: #fff; transition: opacity .35s ease;
+      }
+      #preloader.hide { opacity: 0; pointer-events: none; }
+      .loader-wrap { position: relative; display: grid; place-items: center; gap: 14px; }
+      .spinner {
+        width: 56px; height: 56px; border-radius: 50%;
+        border: 3px solid rgba(255,255,255,.25);
+        border-top-color: #fff; animation: spin .9s linear infinite;
+      }
+      .brand { font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
+               font-weight: 600; letter-spacing: .4px; opacity: .9; }
+      .topbar {
+        position: fixed; top: 0; left: -40%;
+        width: 40%; height: 3px; border-radius: 3px;
+        background: linear-gradient(90deg, rgba(255,255,255,.0), rgba(255,255,255,.8), rgba(255,255,255,.0));
+        animation: bar 1.2s ease-in-out infinite;
+        mix-blend-mode: screen;
+      }
+      @keyframes spin { to { transform: rotate(360deg); } }
+      @keyframes bar { 0% { transform: translateX(0); } 100% { transform: translateX(250%); } }
+      @media (prefers-reduced-motion: reduce) {
+        .spinner, .topbar { animation: none !important; }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- Preloader -->
+    <div id="preloader">
+      <div class="loader-wrap">
+        <div class="spinner"></div>
+        <div class="brand">@copilot_shogo</div>
+        <div class="topbar"></div>
+      </div>
+    </div>
+
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
